2009-12-25  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        DOMWindow is missing lots of SVG* constructor objects
        https://bugs.webkit.org/show_bug.cgi?id=20430

        Expose all implemented SVG 1.1 constructors.

        Test: svg/custom/global-constructors.js

        * bindings/v8/V8Index.cpp: Add missing includes for SVGFontFaceElement & SVGMissingGlyphElement
        * bindings/v8/V8Index.h: Add misisng SVGFontFaceElement & SVGMissingGlyphElement declarations.
        * page/DOMWindow.idl: Add a bunch of new SVG object ctors.
        * svg/SVGAnimatedPathData.idl: Add OmitConstructor flag, as this is a SVG MI class, which is not exposable at the moment.
        * svg/SVGAnimatedPoints.idl: Ditto.


Canonical link: https://commits.webkit.org/43972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52559 268f45cc-cd09-0410-ab3c-d52691b4dbfc